# comfyui-model-metadata

./: .gitignore  README.md  __init__.py  package.json  pyproject.toml
js/: index.js
