[project]
name = "comfyui-model-metadata"
description = "Print model metadata on note node"
version = "1.0.1"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/shinich39/comfyui-model-metadata"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "shinich39"
DisplayName = "comfyui-model-metadata"
Icon = ""
